[tool.poetry]
name = "db-toolkit"
version = "0.1.2"
description = ""
authors = ["Enveloss"]
packages = [{include = "db_toolkit"}]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "1.4.45"
asyncpg = "0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
